# metric

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-publish.yaml  check.yaml
examples/basic/: examples.py
src/metrics/exceptions/: __init__.py
src/metrics/protocols/: __init__.py  protocols.py
src/metrics/types/: __init__.py  base.py  enums.py
src/metrics/utils/: __init__.py  runners.py
tests/: test_protocols__examples_basic.py  test_types_base.py
