[tool.poetry]
name = "metric"
version = "0.1.0"
description = "A lightweight framework for defining arbitrary business metrics as Python code."
authors = ["Fraser <fraserisbester@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
